--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,5 @@ kotlin.code.style=official
 android.useAndroidX=true
 kotlin.mpp.enableGranularSourceSetsMetadata=true
 kotlin.native.enableDependencyPropagation=false
-compose_version=1.1.1
-ktor_version=2.0.0-beta-1
-kotlin_version=1.6.10
-logback_version=1.2.3
+composeVersion=1.1.1
+ktorVersion=2.0.0-beta-1
