--- a/gradle.properties
+++ b/gradle.properties
@@ -2,5 +2,6 @@ kotlin.code.style=official
 android.useAndroidX=true
 kotlin.mpp.enableGranularSourceSetsMetadata=true
 kotlin.native.enableDependencyPropagation=false
+kotlin.mpp.enableCInteropCommonization=true
 composeVersion=1.1.1
 ktorVersion=2.0.0-beta-1
