--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,14 @@
 kotlin.code.style=official
 android.useAndroidX=true
+
+# Multiplatform
 kotlin.mpp.enableGranularSourceSetsMetadata=true
-kotlin.native.enableDependencyPropagation=false
 kotlin.mpp.enableCInteropCommonization=true
+kotlin.native.enableDependencyPropagation=true
+
+# Dependency Versions
 composeVersion=1.1.1
 ktorVersion=2.0.0-beta-1
+
+# Experimental Features
+opt-in=kotlin.RequiresOptIn
