--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,7 @@ kotlin.native.enableDependencyPropagation=true
 # Dependency Versions
 composeVersion=1.1.1
 ktorVersion=2.0.0-beta-1
+serializationVersion=1.3.2
 
 # Experimental Features
 opt-in=kotlin.RequiresOptIn
